[build-system]
requires = ["setuptools==70.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["routes"]

[project]
name = "lightberry"
# lightberry.__version__
version = "1.3.1"
authors = [
  { name = "zNitche" },
]
description = "lightweight async web framework for Raspberry Pi Pico W"
readme = "README.md"
classifiers = [
    "Environment :: Web",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "License :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/zNitche/lightberryAPI"
Issues = "https://github.com/zNitche/lightberryAPI/issues"
